src/test/deca/context/valid/bool_op.deca

// Description :
// Opérateurs logiques &&, ||, ! sur bool
//
// Resultats :
// ok
//

{
  boolean b;
  b = true && false || !false;
  println(b);
}