src/test/deca/context/invalid/arth_on_bool.deca
// Description :
// Opérateurs arithmétique sur boolean 
//
// Resultats :
// Erreur contextuelle
// opérateur + attend des numériques
//

{
  int x;
  x = true + 1;
}